# robot-butler-enpm808x

./: .travis.yml  CMakeLists.txt  readme.html  readme.md
app/: CMakeLists.txt  CameraModule.cpp  LidarModule.cpp  PathPlanningModule.cpp  Robot.cpp  SensorFusionModule.cpp  main.cpp
doc/: Doxyfile
doc/html/: _8ycm__extra__conf_8py.html  _camera_module_8cpp.html  _camera_module_8hpp.html  _camera_module_8hpp__dep__incl.map  _camera_module_8hpp__dep__incl.md5  _camera_module_8hpp__incl.md5  _camera_module_8hpp_source.html  _camera_test_8cpp.html  _camera_test_8cpp.js  _camera_test_8cpp__incl.map  _camera_test_8cpp__incl.md5  _lidar_module_8cpp.html  _lidar_module_8hpp.html  _lidar_module_8hpp__dep__incl.map  _lidar_module_8hpp__dep__incl.md5  _lidar_module_8hpp_source.html  _lidar_test_8cpp.html  _path_planning_module_8cpp.html  _path_planning_module_8cpp__incl.map  _path_planning_module_8hpp.html  _path_planning_module_8hpp__dep__incl.map  _path_planning_module_8hpp__dep__incl.md5  _path_planning_module_8hpp__incl.map  _path_planning_module_8hpp_source.html  _path_planning_test_8cpp.html  _path_planning_test_8cpp__incl.map  _robot_8cpp.html  _robot_8cpp__incl.map  _robot_8cpp__incl.md5  _robot_8hpp.html  _robot_8hpp__dep__incl.map  _robot_8hpp__dep__incl.md5  _robot_8hpp__incl.map  _robot_8hpp__incl.md5  (+97 more)
include/: CameraModule.hpp  LidarModule.hpp  PathPlanningModule.hpp  Robot.hpp  SensorFusionModule.hpp
results/: cppcheck.txt  cpplint.txt
test/: CMakeLists.txt  CameraTest.cpp  LidarTest.cpp  PathPlanningTest.cpp  RobotTest.cpp  SensorFusionTest.cpp  main.cpp
(+276 files in other folders)
